# libinfer

./: .gitignore  Cargo.toml  README.md  REFACTORING_PLAN.txt  build.rs  flake.nix
examples/: basic.rs  bench_cuda_graphs.rs  benchmark.rs  device_tensor_compare.rs  dynamic.rs  functional_test.rs  onnx_tensorrt_compare.rs  sync_compare.rs
src/: engine.cpp  engine.h  lib.rs  main.rs
test/: features.txt  generate_models.py  test_dynamic.onnx  test_multi_input.onnx
tests/: integration.rs
