[package]
name = "libinfer"
version = "0.1.0"
edition = "2021"
description = "Rust interface to TensorRT for high-performance GPU inference"
authors = ["Saronic Technologies"]
license = "MIT"
repository = "https://github.com/saronic-technologies/libinfer"
documentation = "https://docs.rs/libinfer"
readme = "README.md"
keywords = ["tensorrt", "inference", "machine-learning", "gpu", "cuda"]
categories = ["api-bindings", "science"]
exclude = ["test/*"]

[lib]
name = "libinfer"

[dependencies]
cxx = "1.0.116"
cudarc = { version = "0.19", default-features = false, features = [
  "driver",
  "dynamic-linking",
  "cuda-12080",
] }

[build-dependencies]
cmake = "0.1.50"
pkg-config = "0.3.30"
cxx-build = "1.0.116"

[dev-dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
clap = { version = "4.5.27", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["doc-only"]
no-default-features = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "dynamic"
path = "examples/dynamic.rs"

